# gpr300-sp2024-sierra-blume

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: lit.frag  lit.vert
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: Tiles131_2K-JPG.mtlx  Tiles131_2K-JPG.usdc  lit.frag  lit.vert
assignments/assignment4/: CMakeLists.txt  main.cpp
assignments/assignment4/assets/: AnimationClip.cpp  AnimationClip.h  Animator.h  Vec3Key.h  lit.vert
assignments/assignment6/: CMakeLists.txt  main.cpp
assignments/assignment6/assets/: lit.frag
core/: CMakeLists.txt
core/slib/: animation.h  joint.h
